package com.letterfrequency;

import com.letterfrequency.ui.ConsoleUI;
public class Main {
    public static void main(String[] args) {
        ConsoleUI ui = new ConsoleUI();
        ui.start();
    }
}
